# workshop-modal-comfyui-cumbre-ai

./: LICENSE  README.md  pyproject.toml
comfyui/: comfyapp.py
