[project]
name = "workshop-modal-comfyui-cumbre-ai"
version = "0.1.0"
description = "Add a short description here"
authors = [{name = "Sebastian Rojo", email = "arpagon@gmail.com"}]
requires-python = ">= 3.11"
dependencies = ["modal", "requests"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
workshop-modal-comfyui-cumbre-ai = { path = ".", editable = true }

[tool.pixi.tasks]
